@@ -3,34 +3,28 @@ kgmlNonmetabolicName2MetabolicName <- function(destfile) {
 }
 
 getKGMLurl <- function(pathwayid, organism="hsa") {
-  baseurl <- "ftp://ftp.genome.jp/pub/kegg/xml/kgml/non-metabolic/organisms"
+  ## baseurl <- "ftp://ftp.genome.jp/pub/kegg/xml/kgml/non-metabolic/organisms"
+  baseurl <- "http://www.genome.jp/kegg-bin/download?entry=%s%s&format=kgml"
 
-  pathwayid <- gsub("path:","",pathwayid)
-  pco <- grep("^[a-z][a-z][a-z]", pathwayid)
-  pco <- pco == seq(along=pathwayid)
-  ispco <- length(pco) > 0 & all(pco)
-  if(ispco) { ## pathwayid contains organism code
-    organism <- sapply(pathwayid, function(x) substr(x, 1,3))
-    id <- pathwayid
-  } else { ## pathwayid contains no organism code
-    id <- paste(organism, pathwayid, sep="")
-  }
-
-  idfile <- paste(id,".xml",sep="")
-  urls <- paste(baseurl, organism, idfile, sep="/")
-  return(urls)
-}
-
-getCategoryIndepKGMLurl <- function(pathwayid, organism="hsa", method="wget",...) {
-  kgml <- getKGMLurl(pathwayid=pathwayid, organism=organism)
-  categoryIndepKGMLurl <- ""
-  downloadStatCode <- suppressWarnings(download.file(kgml, destfile=tempfile(),method=method))
-  if(downloadStatCode == 0) {
-    categoryIndepKGMLurl <- kgml
+  pathwayid <- gsub("path","",pathwayid)
+  pathwayid <- gsub(":","",pathwayid)
+  pco <- grepl("^[a-z][a-z][a-z]", pathwayid)
+  
+  org.len <- length(organism)
+  if(org.len==1 & length(pathwayid)!=1) {
+    organisms <- rep(organism, length(pathwayid))    
+    organisms[pco] <- sapply(pathwayid[pco], function(x) substr(x, 1L, 3L))
+  } else if (org.len == length(pathwayid)) {
+    organisms <- organism
   } else {
-    categoryIndepKGMLurl <- kgmlNonmetabolicName2MetabolicName(kgml)
+    stop("The length of 'organism' must be either one or the length of 'pathwayid'\n")
   }
-  return(categoryIndepKGMLurl)
+
+  ids <- pathwayid
+  ids[pco] <- sapply(pathwayid[pco], function(x) substr(x, 4L, nchar(x)))
+  
+  urls <- sprintf(baseurl, organisms, ids)
+  return(urls)
 }
 
 kgmlFileName2PathwayName <- function(filename) {
@@ -45,7 +39,25 @@ kgmlFileName2PathwayName <- function(filename) {
 }
 
 retrieveKGML <- function(pathwayid, organism, destfile, method="wget", ...) {
-  kgml <- getCategoryIndepKGMLurl(pathwayid,organism=organism, method=method, ...)
+  #### now KGML does not differ between metabolic and non-metabolic pathways
+  ##  kgml <- getCategoryIndepKGMLurl(pathwayid,organism=organism, method=method, ...)
+  kgml <- getKGMLurl(pathwayid=pathwayid, organism=organism)
   download.file(kgml, destfile=destfile, method=method,...)
   return(invisible(kgml))
+}
+
+##------------------------------------------------------------##
+## may be obslete in the next main release
+##------------------------------------------------------------##
+getCategoryIndepKGMLurl <- function(pathwayid, organism="hsa", method="wget",...) {
+  .Deprecated(msg="No longer needed, and will be removed in the next main release")
+  kgml <- getKGMLurl(pathwayid=pathwayid, organism=organism)
+  categoryIndepKGMLurl <- ""
+  downloadStatCode <- suppressWarnings(download.file(kgml, destfile=tempfile(),method=method))
+  if(downloadStatCode == 0) {
+    categoryIndepKGMLurl <- kgml
+  } else {
+    categoryIndepKGMLurl <- kgmlNonmetabolicName2MetabolicName(kgml)
+  }
+  return(categoryIndepKGMLurl)
 }
